doc: speed up test suite.
	* doc/specs/dictionary.tex: here.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -42,7 +42,7 @@ d.getWithDefault("four", 4);
 Dictionnary are created like any other object. The constructor can
 take couples of argument to store them in the dictionary.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 Dictionary.new("one", 1, "two", 2);
 [00000000] Dictionary {"one" => 1, "two" => 2}
 \end{urbiscript}
