doc: speed up test suite.
	* doc/tutorial/first-steps.tex, doc/tutorial/flow.tex: here.

--- a/doc/tutorial/first-steps.tex
+++ b/doc/tutorial/first-steps.tex
@@ -129,8 +129,8 @@ y.isVoid;
 \end{urbiscript}
 
 \section{Scopes\index{scope}}
-Scopes can be introduced with curly brackets (\lstinline|{}|), and can
-contain any number of expressions. Variables declared in a scope only
+Scopes are introduced with curly brackets (\lstinline|{}|).  They can
+contain any number of statements. Variables declared in a scope only
 exist within this scope.
 
 \begin{urbiscript}[firstnumber=last]
