doc: FormatInfo: 'e' and 'f'.
	* doc/specs/formatinfo.tex: here.

--- a/doc/specs/formatinfo.tex
+++ b/doc/specs/formatinfo.tex
@@ -57,6 +57,9 @@ following:
   \samp{X} & Prints in hexadecimal uppercase \\
   \samp{o} & Prints in octal\\
   \samp{b} & Prints in binary\\
+  \samp{e} & Prints floats in scientific format\\
+  \samp{E} & Prints floats in scientific format uppercase\\
+  \samp{f} & Prints floats in fixed format\\
   \hline
 \end{tabular}
 
