--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -26,6 +26,7 @@
 \input{specs/object}
 \input{specs/orderable}
 \input{specs/pair}
+\input{specs/path}
 \input{specs/pattern}
 \input{specs/primitive}
 \input{specs/singleton}
