--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -6,6 +6,7 @@
 \input{tutorial/object}
 \input{tutorial/functional}
 \input{tutorial/concurrent}
+\input{tutorial/event}
 
 %\chapter{Standard \us library}
 %\section{Printing}
