--- a/doc/uobject/quick-start.tex
+++ b/doc/uobject/quick-start.tex
@@ -380,7 +380,7 @@ the \us interactive shell only displays the result of synchronous
 expressions (i.e., those ending with a \samp{;}): asynchronous answers
 are confusing (see the inversion here).
 
-Channels (\refObject{Channels}) are useful to ``send'' asynchronous
+Channels (\refObject{Channel}) are useful to ``send'' asynchronous
 answers.
 
 \begin{urbiscript}[firstnumber=last]
