--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -29,6 +29,7 @@
 \input{specs/path}
 \input{specs/pattern}
 \input{specs/primitive}
+\input{specs/regexp}
 \input{specs/singleton}
 \input{specs/string}
 \input{specs/system}
